ndb - bug#21271   make each fragment use own LCP file, so that (s/n)r can use different LCP-no for different fragments