storage/ndb/src/kernel/blocks/ndbfs/Filename.cpp
@@ -149,7 +149,8 @@ Filename::set(Filename::NameSpec& spec,
   {
     Uint32 tableId = FsOpenReq::v5_getTableId(filenumber);
     Uint32 lcpNo = FsOpenReq::v5_getLcpNo(filenumber);
-    BaseString::snprintf(buf, sizeof(buf), "LCP/%d/T%d", lcpNo, tableId);
+    Uint32 fragId = FsOpenReq::v5_getFragmentId(filenumber);
+    BaseString::snprintf(buf, sizeof(buf), "LCP/%d/T%dF%d", lcpNo, tableId, fragId);
     strcat(theName, buf);
     break;
   }
